# buffer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: buffer.h
include/utils/: map.h  pair.h  stack.h  utils.h
src/: buffer.c
src/buffer/: buddy.c
src/utils/: map.c  stack.c  utils.c
test/src/: buddy.test.c  greatest.h  map.test.c  stack.test.c  utils.test.c
